<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Hazelcast Enterprise Root</name>
    <modules>
        <module>hazelcast-enterprise</module>
        <module>hazelcast-enterprise-client</module>
        <module>hazelcast-enterprise-sessions</module>
        <module>hazelcast-enterprise-all</module>
    </modules>
    <groupId>com.hazelcast</groupId>
    <artifactId>hazelcast-enterprise-root</artifactId>
    <packaging>pom</packaging>
    <version>3.5-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.6</jdk.version>
        <target.dir>target</target.dir>
        <maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>
        <hazelcast.distribution>Hazelcast Enterprise</hazelcast.distribution>

        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
        <findbugs.maven.plugin.version>2.5.5</findbugs.maven.plugin.version>
        <checkstyle.maven.plugin.version>2.12</checkstyle.maven.plugin.version>
        <main.basedir>${project.basedir}</main.basedir>
        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
        <maven.shade.plugin.version>2.2</maven.shade.plugin.version>

        <mockito.all.version>1.9.5</mockito.all.version>
        <log4j.version>1.2.12</log4j.version>
        <license.extractor.version>1.0.7</license.extractor.version>
    </properties>

    <licenses>
        <license>
            <name>Commercial License</name>
            <url>http://www.hazelcast.com/licenses/LICENSE.txt</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <organization>
        <name>Hazelcast, Inc.</name>
        <url>http://www.hazelcast.com/</url>
    </organization>


    <repositories>
        <repository>
            <id>snapshot-repository</id>
            <name>Maven2 Snapshot Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>private-repository</id>
            <name>Hazelcast Private Repository</name>
            <url>https://repository-hazelcast-l337.forge.cloudbees.com/release/</url>
        </repository>
    </repositories>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav</artifactId>
                <version>1.0-beta-2</version>
            </extension>
        </extensions>

        <sourceDirectory>src/main/java</sourceDirectory>
        <outputDirectory>${target.dir}/classes</outputDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <testOutputDirectory>${target.dir}/test-classes</testOutputDirectory>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.html</include>
                    <include>**/*.bat</include>
                    <include>**/*.sh</include>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                    <include>**/*.xsd</include>
                    <include>**/*.handlers</include>
                    <include>**/*.schemas</include>
                    <include>**/*.txt</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/META-INF/services/*.*</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.plugin.version}</version>
                <configuration>
                    <finalName>hazelcast-enterprise-${project.version}</finalName>
                    <descriptors>
                        <descriptor>src/main/assembly/hazelcast-enterprise-assembly.xml</descriptor>
                    </descriptors>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <compress>true</compress>
                        <!-- Not needed for now -->
                        <!-- manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile -->
                    </archive>
                    <excludes>
                        <exclude>**/*.html</exclude>
                        <exclude>**/*.sh</exclude>
                        <exclude>**/*.bat</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>

                    <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=1024M
                        -Dhazelcast.version.check.enabled=false
                        -Dhazelcast.mancenter.enabled=false
                        -Dhazelcast.elastic.memory.enabled=true
                        -Dhazelcast.elastic.memory.total.size=128m
                        -Dhazelcast.elastic.memory.chunk.size=1k
                        -Dhazelcast.tomcat.shutdown_hazelcast_instance=false
                    </argLine>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>qa</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>${checkstyle.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>validate</phase>
                                <goals>
                                    <goal>checkstyle</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <configLocation>${main.basedir}/checkstyle/checkstyle.xml</configLocation>
                            <suppressionsLocation>${main.basedir}/checkstyle/suppressions.xml</suppressionsLocation>
                            <headerLocation>${main.basedir}/checkstyle/ClassHeader.txt</headerLocation>
                            <enableRSS>false</enableRSS>
                            <linkXRef>true</linkXRef>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <failOnViolation>true</failOnViolation>
                            <includeTestSourceDirectory>false</includeTestSourceDirectory>
                            <enableRulesSummary>true</enableRulesSummary>
                            <propertyExpansion>main.basedir=${main.basedir}</propertyExpansion>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>findbugs-maven-plugin</artifactId>
                        <version>${findbugs.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>compile</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <failOnError>true</failOnError>
                            <excludeFilterFile>${main.basedir}/findbugs/findbugs-exclude.xml</excludeFilterFile>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
        <profile>
            <id>test-coverage</id>
            <properties>
                <argLine>
                    -Xms128m -Xmx1G -XX:MaxPermSize=1024M
                    -Dhazelcast.version.check.enabled=false
                    -Dhazelcast.mancenter.enabled=false
                    -Dhazelcast.logging.type=none
                    -Dhazelcast.test.use.network=false
                </argLine>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                        <configuration combine.self="override">
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            <testFailureIgnore>true</testFailureIgnore>
                            <excludedGroups>
                                com.hazelcast.test.annotation.NightlyTest
                            </excludedGroups>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <version>${project.version}</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
            <classifier>tests</classifier>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito.all.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.12</version>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.hazelcast.marketing</groupId>
            <artifactId>hazelcast-license-extractor</artifactId>
            <version>${license.extractor.version}</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>cloudbees-private-repository</id>
            <url>dav:https://repository-hazelcast-l337.forge.cloudbees.com/release/</url>
        </repository>
    </distributionManagement>

</project>
